--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,6 @@ __eclim_temp_Vagrantfile
 .rspec
 config/application.yml
 brakeman_report.html
+
+/public/assets
+/config/initializers/secret_token.rb
